added category smoking alcohol recurring variables

--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -134,13 +134,13 @@
         <div class="ui two column grid">
           <div class="column">
             <div class="ui checkbox">
-              <input type="checkbox" name="smoking" checked="">
+              <input type="checkbox" name="Smoking" id="Smoking" checked="">
               <label>Is Smoking Permitted? </label>
             </div>
           </div>
           <div class="column">
             <div class="ui checkbox">
-              <input type="checkbox" name="alcohol" checked="">
+              <input type="checkbox" name="Alcohol" id="Alcohol" checked="">
               <label>Is Alcohol Permitted? </label>
             </div>
           </div>
@@ -151,7 +151,7 @@
           {{> Text_Form_Control label="Meeting Time" id="time" required=false options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
         </div>
         <div class="ui checkbox">
-          <input type="checkbox" name="recurring" checked="">
+          <input type="checkbox" name="Recurring" id="Recurring" checked="">
           <label>Is this meeting recurring? </label>
         </div>
         <br/>
