--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -23,44 +23,23 @@
         <tbody>
         {{#each listing in listingsList}}
           <tr>
-            <td>cat</td>
+            <td>{{listing.category}}</td>
             <td>{{listing.gameName}}</td>
             <td>{{listing.maxPlayers}}</td>
             <td>{{listing.gameLength}}</td>
             <td>{{listing.location}}</td>
-            <td class="center aligned">
-              <i class="large green checkmark icon"></i>
-            </td>
-            <td class="center aligned">
-              <i class="large green checkmark icon"></i>
-            </td>
+            <td>{{listing.smoking}}</td>
+            <td>{{listing.alcohol}}</td>
             <td>{{listing.date}}</td>
             <td>{{listing.time}}</td>
-            <td class="center aligned">
-              <i class="large green checkmark icon"></i>
-            </td>
+            <td>{{listing.recurring}}</td>
             <td>{{listing.contact}}</td>
             <td>{{listing.resources}}</td>
             <td>{{listing.about}}</td>
           </tr>
         {{/each}}
         </tbody>
-        <tfoot>
-        <tr><th colspan="3">
-          <div class="ui floated pagination menu">
-            <a class="icon item">
-              <i class="left chevron icon"></i>
-            </a>
-            <a class="item">1</a>
-            <a class="item">2</a>
-            <a class="item">3</a>
-            <a class="item">4</a>
-            <a class="icon item">
-              <i class="right chevron icon"></i>
-            </a>
-          </div>
-        </th>
-        </tr></tfoot>
+
       </table>
     {{else}}
       {{> Loading}}
