added input text for game name other

--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -37,7 +37,7 @@
         <div class="ui divider"></div>
         <div class="field">
           <label>Game</label>
-          <select class="ui dropdown" id="gameRPG">
+          <select name ="gameRPG" class="ui dropdown" id="gameRPG" onchange='enterNameRPG(this.value);'>
             <option value="">Name</option>
             <option value="1">Dungeons & Dragons</option>
             <option value="2">Shadowrun</option>
@@ -47,6 +47,9 @@
             <option value="6">Pathfinder Roleplaying Game</option>
             <option value="7">Other</option>
           </select>
+          <br/><br/>
+          <input type="text" placeholder="Please enter the name of your game" name="enterRPG" id="enterRPG" style='display:none;'/>
+          <br/>
         </div>
       </div>
       <div id='card' style='display:none'>
@@ -54,31 +57,38 @@
         <div class="ui divider"></div>
         <div class="field">
           <label>Game</label>
-          <select class="ui dropdown" id="gameCARD">
-            <option value="">Name</option>
+          <select name="gameCard" class="ui dropdown" id="gameCARD" onchange='enterNameCard(this.value);'>            <option value="">Name</option>
             <option value="1">Poker</option>
             <option value="2">Rummy</option>
             <option value="3">Cribbage</option>
             <option value="4">Spades</option>
             <option value="5">Mahjong</option>
-            <option value="6">Other</option>
+            <option value="6">Trumps</option>
+            <option value="7">Other</option>
           </select>
+          <br/><br/>
+          <input type="text" placeholder="Please enter the name of your game" name="enterCard" id="enterCard" style='display:none;'/>
+          <br/>
         </div>
       </div>
       <div id='board' style='display:none'>
-        {{enterGameName}}
         <a class="ui teal ribbon label">Game Information</a>
         <div class="ui divider"></div>
         <div class="field">
           <label>Game</label>
-          <select class="ui dropdown" id="gameBOARD">
+          <select name="gameBoard" class="ui dropdown" id="gameBOARD" onchange='enterNameBoard(this.value);'>
             <option value="">Name</option>
             <option value="1">Chess</option>
             <option value="2">Monopoly</option>
             <option value="3">Scrabble</option>
             <option value="4">Backgammon</option>
-            <option value="5">Other</option>
+            <option value="5">Risk</option>
+            <option value="6">Yahtzee</option>
+            <option value="7">Other</option>
           </select>
+          <br/><br/>
+          <input type="text" placeholder="Please enter the name of your game" name="enterBoard" id="enterBoard" style='display:none;'/>
+          <br/>
         </div>
       </div>
       <div id='mini' style='display:none'>
@@ -86,14 +96,17 @@
         <div class="ui divider"></div>
         <div class="field">
           <label>Game</label>
-          <select class="ui dropdown" id="gameMINI">
-            <option value="">Name</option>
+          <select name="gameMINI" class="ui dropdown" id="gameMINI" onchange='enterNameMini(this.value);'>
+          <option value="">Name</option>
             <option value="1">Star Wars: X-Wing</option>
             <option value="2">War Machine</option>
             <option value="3">Hordes</option>
             <option value="4">War Hammer</option>
             <option value="5">Other</option>
           </select>
+          <br/><br/>
+          <input type="text" placeholder="Please enter the name of your game" name="enterMini" id="enterMini" style='display:none;'/>
+          <br/>
         </div>
       </div>
       <div id='dataFields' style='display:none'>
@@ -170,8 +183,39 @@
         <div class="ui error message"></div>
       </div>
     </form>
-
     <script>
+      function enterNameRPG(val) {
+        var element = document.getElementById('enterRPG');
+        if (val === '7') {
+          element.style.display = 'block';
+        } else {
+          element.style.display = 'none';
+        }
+      }
+      function enterNameCard(val) {
+        var element = document.getElementById('enterCard');
+        if (val === '7') {
+          element.style.display = 'block';
+        } else {
+          element.style.display = 'none';
+        }
+      }
+      function enterNameBoard(val) {
+        var element = document.getElementById('enterBoard');
+        if (val === '7') {
+          element.style.display = 'block';
+        } else {
+          element.style.display = 'none';
+        }
+      }
+      function enterNameMini(val) {
+        var element = document.getElementById('enterMini');
+        if (val === '5') {
+          element.style.display = 'block';
+        } else {
+          element.style.display = 'none';
+        }
+      }
       $('.ui.radio.checkbox')
           .checkbox({
             onChecked: function () {
