--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -161,7 +161,7 @@
         </div>
         <br/>
         <div class="fields">
-          <label for="date">Meeting Date : </label>
+          <label for="date">Meeting Date </label>
           <br/>
           <input id="date" type="date"/>
           {{> Text_Form_Control label="Meeting Time" id="time" required=false options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
