--- a/app/imports/ui/pages/calendar/calendar-page.html
+++ b/app/imports/ui/pages/calendar/calendar-page.html
@@ -1,4 +1,14 @@
 <template name="Calendar_Page">
 
-  {{> fullcalendar }}
+  <div class="ui raised segment container">
+    <!--Add the events calendar to the template.-->
+    <!--{{> fullcalendar }}-->
+    <div id="event-calendar"></div>
+  </div>
+
+
+  <div id="addGame" class="ui modal">
+    {{>AddGame_Page }}
+  </div>
+
 </template>
