Test add adds, but gets removed

--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -21,7 +21,7 @@
                 <label>Miniature Games</label>
               </div>
             <div class="ui radio checkbox">
-              <input type="radio" name="category" id="all-games">
+              <input type="radio" name="category" id="all-games" checked="checked">
               <label>All Games</label>
             </div>
             </div>
@@ -140,7 +140,7 @@
         </form>
 
 
-        {{#each gameList}}
+        {{#each gamesList}}
         <form class="ui card games-data-form centered" style=" padding-top:5px;width:95%;">
           <div class="field" style="align-content: center; color: black; font-size: large">
             <div class="ui four column doubling stackable grid container">
