Category Searching Works

--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -58,7 +58,7 @@
         {{#each game in gamesList}}
         <p></p>
         <div>
-        <form class="ui card games-data-form " style=" padding-top:5px;width:95%;">
+        <form class="ui card games-data-form " style=" padding-top:5px;width:95%;position:static;">
           <div class="field" style="align-content: center; color: black; font-size: large">
             <div class="ui four column doubling stackable grid container">
               <div class="column">
