--- a/app/imports/ui/pages/addGame/addGame.html
+++ b/app/imports/ui/pages/addGame/addGame.html
@@ -138,7 +138,7 @@
             </select>
           </div>
           <div class="column">
-            <label style="color: black">Approx. Length of Game (in Hours)</label>
+            <label style="color: black">Estimated Length of Game (in Hours)</label>
             <select class="ui dropdown" id="Length">
               <option value="">Game Length</option>
               <option value="1">1 Hour</option>
@@ -151,7 +151,8 @@
         </div>
         <br/>
         <div class="field">
-          {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" required=optional errorMessage=(fieldError "picture")}}
+          {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" errorMessage=(fieldError
+          "picture")}}
         </div>
         <div class="ui two column grid">
           <div class="column">
@@ -187,11 +188,11 @@
         <br/>
         <br/>
         <div class="fields">
-          {{> Social_Network_Form_Control label="Contact Email" id="contact" required=false icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
+          {{> Social_Network_Form_Control label="Contact Email" id="contact" icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
           {{> Text_Form_Control label="Resources" id="resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
         </div>
         <div class="field">
-          {{> Text_Form_Control label="Image URL" id="imageURL" required=false placeholder="http://www.website.com/image.jpg" }}
+          {{> Text_Form_Control label="Image URL" id="imageURL" placeholder="http://www.website.com/image.jpg" }}
         </div>
         <div class="field">
           {{> TextArea_Form_Control label="About / Comments" id="about" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
@@ -213,7 +214,7 @@
       }
       function enterNameCard(val) {
         var element = document.getElementById('enterCard');
-        if (val === '7') {
+        if (val === '10') {
           element.style.display = 'block';
         } else {
           element.style.display = 'none';
@@ -272,6 +273,22 @@
           });
       $('.dropdown').dropdown({ transition: 'drop' }).dropdown({ on: 'hover' });
 
+      // function to check if the text contains an element from the array
+      $.fn.form.settings.rules.containsInArray = function (text, csv) {
+        var array = csv.split(','); // you're separating the string by commas
+        var isContains = false; // return value
+        // for each element check it usign contains function
+        $.each(array, function (index, elem) {
+          if ($.fn.form.settings.rules.contains(text, $.trim(elem))) {
+            // if condition are meet set the result as true
+            // and breaks the loop
+            isContains = true;
+            return false;
+          }
+        });
+        return isContains;
+      };
+
       $('.ui.form')
           .form({
             fields: {
@@ -281,6 +298,24 @@
                   {
                     type: 'empty',
                     prompt: 'Please select a Game.'
+                  }
+                ]
+              },
+              players: {
+                identifier: 'Players',
+                rules: [
+                  {
+                    type: 'empty',
+                    prompt: 'Please select the maximum number of players.'
+                  }
+                ]
+              },
+              length: {
+                identifier: 'Length',
+                rules: [
+                  {
+                    type: 'empty',
+                    prompt: 'Please select the estimated length of the game.'
                   }
                 ]
               },
@@ -316,11 +351,41 @@
                 rules: [
                   {
                     type: 'email',
-                    prompt: 'Please enter a valid email address'
+                    prompt: 'Please enter a valid email address.'
                   },
                 ]
-
-              }
+              },
+              resources: {
+                identifier: 'Resources',
+                rules: [
+                  {
+                    type: 'url',
+                    prompt: 'Please enter a valid URL in the Resources field.'
+                  },
+                ]
+              },
+              imageURL: {
+                identifier: 'imageURL',
+                rules: [
+                  {
+                    type: 'url',
+                    prompt: 'Image URL not a valid URL'
+                  },
+                  {
+                    type: 'containsInArray[.png, .jpg, .jpeg, .gif, .tiff, .bmp, .svg]',
+                    prompt: 'Image URL not a valid image'
+                  },
+                ]
+              },
+              about: {
+                identifier: 'about',
+                rules: [
+                  {
+                    type: 'empty',
+                    prompt: 'Please enter About/Comments.'
+                  },
+                ]
+              },
             }
           });
     </script>
