--- a/app/imports/ui/pages/calendar/calendar-page.html
+++ b/app/imports/ui/pages/calendar/calendar-page.html
@@ -2,11 +2,10 @@
 
   <div class="ui raised segment container">
     <!--Add the events calendar to the template.-->
-    <!--{{> fullcalendar }}-->
     <div id="event-calendar"></div>
   </div>
 
-
+  <!-- link to the "add game" page -->
   <div id="addGame" class="ui modal">
     {{>AddGame_Page }}
   </div>
