--- a/app/imports/ui/pages/calendar/calendar-page.html
+++ b/app/imports/ui/pages/calendar/calendar-page.html
@@ -7,7 +7,7 @@
 
   <!-- link to the "add game" page -->
   <div id="addGame" class="ui modal">
-    {{>AddGame_Page }}
+    <!--{{>AddGame_Page }}-->
   </div>
 
 </template>
