--- a/app/imports/ui/pages/calendar/calendar-page.html
+++ b/app/imports/ui/pages/calendar/calendar-page.html
@@ -5,7 +5,7 @@
     <div id="event-calendar"></div>
   </div>
 
-  <!-- link to the "add game" page -->
+  <!--&lt;!&ndash; link to the "add game" page &ndash;&gt;-->
   <div id="addGame" class="ui modal">
     <!--{{>AddGame_Page }}-->
   </div>
