--- a/app/imports/ui/pages/calendar/calendar-page.html
+++ b/app/imports/ui/pages/calendar/calendar-page.html
@@ -4,6 +4,9 @@
     <!--Add the events calendar to the template.-->
     <div id="event-calendar"></div>
   </div>
-
+  Create the "create-event-modal"
+  <div id="create-event-modal" class="ui modal">
+    {{>Create_Event_Modal}}
+  </div>
 
 </template>
