--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -134,7 +134,7 @@
                         {{else if isOpen game._id}}
                            <button class="ui button blue joinGame" value="{{game._id}}" href="#" > Join Us!</button>
                         {{else}}
-                           <button class="ui button red" value="{{game._id}}" href="#" > Game Is Full</button>
+                           <button class="ui button red full" value="{{game._id}}" href="#" > Game Is Full</button>
                     {{/if}}
 
                   <!--
