Stoped page refreshing
returning to branch

--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -130,11 +130,11 @@
                   <br>
                   <div class="item">
                     {{#if alreadyPlaying game._id}}
-                       <button class="ui button red leaveGame" value="{{game._id}}" href="#" > Leave Game</button>
+                       <button class="ui button red leaveGame" value="{{game._id}}" href="#" onclick="false" > Leave Game</button>
                         {{else if isOpen game._id}}
-                           <button class="ui button blue joinGame" value="{{game._id}}" href="#" > Join Us!</button>
+                           <button class="ui button blue joinGame" value="{{game._id}}" href="#" onclick="false"> Join Us!</button>
                         {{else}}
-                           <button class="ui button red full" value="{{game._id}}" href="#" > Game Is Full</button>
+                           <button class="ui button red full" value="{{game._id}}" href="#" onclick="false"> Game Is Full</button>
                     {{/if}}
 
                   <!--
